# django-docs-rag

./: .dockerignore  .gitignore  Dockerfile  README.md  checkpoint.json  docker-compose.yml  main.py  pyproject.toml
app/: api.py  schema.py  utils.py  weaviate_client.py
